Display whole commit width up to 72ch if screen size allows
Previously, when the screen size shrank, the commit message and related
changes both got smaller. This caused the commit message to be difficult
to read.

This change sets flex-shrink to 0 on the commit container so that the
related changes absorb all of the shrinkage instead. Because this can,
in certain cases, cause related changes to be unreadable, two steps have
been taken to alleviate this:
  1) On hover of related change, display full text
  2) Add a new breakpoint at 60em, which moves related change below the
     commit message, before entering the full mobile view.

The rule to determine if the related changes toggle is needed is updated
to take into account this new view, so that it fits without jank
assuming there is space, and if not adds a minimal height that can be
expanded.

Bug: Issue 5706
Change-Id: I1ed723af55e9ca1706c8ef877902ee2c2e4148b2

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
@@ -116,7 +116,7 @@ limitations under the License.
       }
       .commitMessage {
         font-family: var(--monospace-font-family);
-        max-width: 100ch;
+        max-width: 72ch;
         margin-right: 1em;
         margin-bottom: 1em;
       }
@@ -143,7 +143,7 @@ limitations under the License.
         flex-direction: column;
         min-width: 0;
       }
-      .commitAndRelated {
+      #commitAndRelated {
         align-content: flex-start;
         display: flex;
         flex: 1;
@@ -218,6 +218,7 @@ limitations under the License.
       .commitContainer {
         display: flex;
         flex-direction: column;
+        flex-shrink: 0;
       }
       .collapseToggleContainer {
         display: flex;
@@ -228,6 +229,12 @@ limitations under the License.
       #relatedChangesToggle {
         margin-left: 1em;
         padding-top: var(--related-change-btn-top-padding, 0);
+      }
+      @media screen and (max-width: 60em) {
+        #commitAndRelated {
+          flex-direction: column;
+          flex-wrap: nowrap;
+        }
       }
       @media screen and (max-width: 50em) {
         .mobile {
@@ -261,7 +268,7 @@ limitations under the License.
           padding-right: 0;
         }
         .changeInfo,
-        .commitAndRelated {
+        #commitAndRelated {
           flex-direction: column;
           flex-wrap: nowrap;
         }
@@ -352,7 +359,7 @@ limitations under the License.
                 on-download-tap="_handleDownloadTap"></gr-change-actions>
           </div>
           <hr class="mobile">
-          <div class="commitAndRelated">
+          <div id="commitAndRelated">
             <div class="commitContainer">
               <div
                   id="commitMessage"
