PolyGerrit: Fix reviewed checkbox in diff view
Change-Id: Ic1c5abdf63fc6ae9bb29d81c78f89a61e05ce9b1

--- a/polygerrit-ui/app/elements/diff/gr-diff-view/gr-diff-view.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-view/gr-diff-view.html
@@ -209,6 +209,14 @@ limitations under the License.
             [[_changeNum]]</a><span>:</span>
           <span>[[_change.subject]]</span>
           <span class="dash">—</span>
+          <!--<input id="reviewed"
+                 class="reviewed"
+                 type="checkbox"
+                 checked="[[file.isReviewed]]"
+                 aria-label="Reviewed checkbox"
+                 title="Mark as reviewed (shortcut: r)"
+                 on-tap="_handleReviewedChange"
+                 hidden$="[[!_loggedIn]]" hidden>-->
           <input id="reviewed"
                  class="reviewed"
                  type="checkbox"
