PolyGerrit: Switch from highlight.js to codemirror
* Highlight.js is now unmaintained.

* CodeMirror supports all the languages without building for each lang.
(it increases the size but supports all langs so we doint have to keep
getting reports to support additional langs)

Change-Id: Id84244c1b9973c962eb91e5577fcde0651797c34

--- a/polygerrit-ui/app/elements/diff/gr-syntax-lib-loader/gr-syntax-lib-loader.html
+++ b/polygerrit-ui/app/elements/diff/gr-syntax-lib-loader/gr-syntax-lib-loader.html
@@ -1,5 +1,5 @@
 <!--
-Copyright (C) 2016 The Android Open Source Project
+Copyright (C) 2017 The Android Open Source Project
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -13,6 +13,9 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<script src="../../../bower_components/codemirror-minified/lib/codemirror.js"></script>
+<link rel="stylesheet" type="text/css" href="../../../bower_components/codemirror-minified/lib/codemirror.css">
+<script src="../../../bower_components/codemirror-minified/mode/javascript/javascript.js"></script>
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 
 <dom-module id="gr-syntax-lib-loader">
